--- a/docs/dissertation/refs.bib
+++ b/docs/dissertation/refs.bib
@@ -137,7 +137,7 @@
 }
 
 @book{richardson2004h,
-    title={H.264 and MPEG-4 video compression: video coding for next-generation multimedia},
+    title={{H.264} and {MPEG-4} video compression: video coding for next-generation multimedia},
     author={Richardson, Iain E},
     year={2004},
     publisher={John Wiley \& Sons},
@@ -145,7 +145,7 @@
 }
 
 @misc{softid-notes,
-    title="Software and Interface Design",
+    title="{Software and Interface Design}",
     author="Alan Blackwell",
     year="2015",
     note="University of Cambridge Part IA CST course notes"
@@ -161,7 +161,7 @@
 }
 
 @inproceedings{tourapis2004direct,
-  title={Direct macroblock coding for predictive (P) pictures in the H. 264 standard},
+  title="Direct macroblock coding for predictive {(P)} pictures in the {H.264} standard",
   author={Tourapis, Alexis M and Wu, Feng and Li, Shipeng},
   booktitle={Electronic Imaging 2004},
   pages={364--371},
@@ -170,7 +170,7 @@
 }
 
 @article{clarke2002reed,
-  title={Reed-Solomon error correction},
+  title="{Reed--Solomon} error correction",
   author={Clarke, CKP},
   journal={BBC R\&D White Paper, WHP},
   volume={31},
@@ -178,9 +178,9 @@
 }
 
 @misc{ai2-notes,
-    title="Artificial Intelligence II",
+    title="{Artificial Intelligence II}",
     author="Sean Holden",
-    year="2015",
+    year="2016",
     note="University of Cambridge Part II CST course notes"
 }
 
